<resources>
    <string name="app_name">Breaking Pet</string>
    <string name="home">Home</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="quotes">Quotes</string>
    <string name="deaths">Deaths</string>
    <string name="deaths_in_development">Deaths tab\n(In development)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_photo">character_photo</string>
    <string name="character_name">Name:</string>
    <string name="error_icon">error_icon</string>
    <string name="oops_something_went_wrong">Oops! Something Went Wrong</string>
    <string name="title">Title:</string>
    <string name="season">Season:</string>
    <string name="air_date">Air date:</string>
    <string name="get_random_quote">Get random quote</string>
    <string name="author">Author:</string>
    <string name="official_trailer">Official Trailer:</string>
    <string name="location">Location</string>
    <string name="openDrawer">Drawer navigation opened</string>
    <string name="closeDrawer">Drawer navigation closed</string>
    <string name="description">Description:</string>
    <string name="cast">Cast:</string>
    <string name="albuquerque">Albuquerque</string>
    <string name="exit">Exit</string>
    <string name="exit_icon">exit_icon</string>
    <string name="are_you_sure_bitch">Are you sure, Bitch?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="undefined">undefined</string>
    <string name="error">Error</string>
    <string name="nickname">Nickname:</string>
    <string name="portrayed">Portrayed:</string>
    <string name="occupation">Occupation:</string>
    <string name="status">Status:</string>
    <string name="appearance">Appearance:</string>
    <string name="show_description">A chemistry teacher diagnosed with inoperable lung cancer turns to manufacturing and selling methamphetamine with a former student in order to secure his family\'s future.</string>
    <string name="bb_awards">bb_awards</string>
</resources>