<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/navigation_home"

        android:title="@string/home" />

    <item
        android:id="@+id/charactersFragment"
        android:icon="@drawable/navigation_characters"

        android:title="@string/characters" />

    <item
        android:id="@+id/episodesFragment"
        android:icon="@drawable/navigation_episodes"

        android:title="@string/episodes" />
    <item
        android:id="@+id/quotesFragment"
        android:icon="@drawable/navigation_quotes"

        android:title="@string/quotes" />
    <item
        android:id="@+id/deathsFragment"
        android:icon="@drawable/navigation_deaths"

        android:title="@string/deaths" />

</menu>