<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/character_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.breakingpet.presentation.fragments.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/charactersFragment"
        android:name="com.example.breakingpet.presentation.fragments.characters.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_charactersFragment_to_characterDetailsFragment2"
            app:destination="@id/characterDetailsFragment2" />
    </fragment>
    <fragment
        android:id="@+id/episodesFragment"
        android:name="com.example.breakingpet.presentation.fragments.episodes.EpisodesFragment"
        android:label="@string/episodes"
        tools:layout="@layout/fragment_episodes" >
        <action
            android:id="@+id/action_episodesFragment_to_episodeDetailsFragment2"
            app:destination="@id/episodeDetailsFragment2" />
    </fragment>
    <fragment
        android:id="@+id/quotesFragment"
        android:name="com.example.breakingpet.presentation.fragments.quotes.QuotesFragment"
        android:label="@string/quotes"
        tools:layout="@layout/fragment_quotes" />
    <fragment
        android:id="@+id/deathsFragment"
        android:name="com.example.breakingpet.presentation.fragments.deaths.DeathsFragment"
        android:label="@string/deaths"
        tools:layout="@layout/fragment_deaths" />
    <fragment
        android:id="@+id/characterDetailsFragment2"
        android:name="com.example.breakingpet.presentation.fragments.characters.CharacterDetailsFragment"
        android:label="{characterName}"
        tools:layout="@layout/fragment_character_details">
        <argument
            android:name="character"
            app:argType="com.example.breakingpet.domain.model.characters.Character" />
        <argument
            android:name="characterName"
            app:argType="string" />

    </fragment>
    <fragment
        android:id="@+id/episodeDetailsFragment2"
        android:name="com.example.breakingpet.presentation.fragments.episodes.EpisodeDetailsFragment"
        android:label="{episodeTitle}"
        tools:layout="@layout/fragment_episode_details" >
        <argument
            android:name="episode"
            app:argType="com.example.breakingpet.domain.model.episodes.Episode" />
        <argument
            android:name="episodeTitle"
            app:argType="string" />
    </fragment>

</navigation>