<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/characterDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2AB670"
    android:scrollHorizontally="false"
    tools:context=".presentation.fragments.characters.CharacterDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/character_photo"
            android:layout_width="190dp"
            android:layout_height="270dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/character_photo"
            android:foreground="@drawable/shape_image_borders"
            android:padding="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/character_without_photo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/character_name"
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_photo" />

        <TextView
            android:id="@+id/name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text=""
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="@+id/name" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nickname"
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name_value" />

        <TextView
            android:id="@+id/nickname_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text=""
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/nickname"
            app:layout_constraintTop_toTopOf="@+id/nickname" />


        <TextView
            android:id="@+id/portrayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/portrayed"
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nickname"
            app:layout_constraintTop_toBottomOf="@+id/nickname_value" />

        <TextView
            android:id="@+id/portrayed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text=""
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/portrayed"
            app:layout_constraintTop_toTopOf="@+id/portrayed" />

        <TextView
            android:id="@+id/occupation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/occupation"
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/portrayed"
            app:layout_constraintTop_toBottomOf="@+id/portrayed_value" />

        <TextView
            android:id="@+id/occupation_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/occupation"
            app:layout_constraintTop_toBottomOf="@id/portrayed_value" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/occupation"
            app:layout_constraintTop_toBottomOf="@+id/occupation_value" />

        <TextView
            android:id="@+id/status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text=""
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/status"
            app:layout_constraintTop_toTopOf="@+id/status" />

        <TextView
            android:id="@+id/appearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/appearance"
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/status"
            app:layout_constraintTop_toBottomOf="@+id/status_value" />

        <TextView
            android:id="@+id/appearance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text=""
            android:textColor="@color/green_01"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/appearance"
            app:layout_constraintTop_toTopOf="@+id/appearance" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>