<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/episodeDetailsFragment"
    android:background="#2AB670"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.episodes.EpisodeDetailsFragment">

    <ImageView
        android:id="@+id/episode_photo"
        android:layout_width="190dp"
        android:layout_height="270dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/character_photo"
        android:foreground="@drawable/shape_image_borders"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/character_without_photo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/title"
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/episode_photo" />

    <TextView
        android:id="@+id/title_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text=""
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <TextView
        android:id="@+id/air_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/air_date"
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title_value" />

    <TextView
        android:id="@+id/air_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text=""
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/air_date"
        app:layout_constraintTop_toTopOf="@+id/air_date" />


    <TextView
        android:id="@+id/characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Characters:"
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/air_date"
        app:layout_constraintTop_toBottomOf="@+id/air_date_value" />

    <TextView
        android:id="@+id/characters_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text=""
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/characters"
        app:layout_constraintTop_toTopOf="@+id/characters" />

    <!--<TextView
        android:id="@+id/occupation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Occupation:"
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/portrayed"
        app:layout_constraintTop_toBottomOf="@+id/portrayed_value" />

    <TextView
        android:id="@+id/occupation_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"

        android:text=""
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/occupation"
        app:layout_constraintTop_toBottomOf="@id/portrayed_value" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Status:"
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/occupation"
        app:layout_constraintTop_toBottomOf="@+id/occupation_value" />

    <TextView
        android:id="@+id/status_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text=""
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/status"
        app:layout_constraintTop_toTopOf="@+id/status" />

    <TextView
        android:id="@+id/appearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Appearance:"
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/status"
        app:layout_constraintTop_toBottomOf="@+id/status_value" />

    <TextView
        android:id="@+id/appearance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text=""
        android:textColor="@color/green_01"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/appearance"
        app:layout_constraintTop_toTopOf="@+id/appearance" />-->

</androidx.constraintlayout.widget.ConstraintLayout>